--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
     <div class="container">
         <header>
             <div class="icon">&#129504;</div>
-            <h1>Project Proposal</h1>
-            <p>High-Fidelity Mesh Improvement for MRI-Derived Anatomical Models</p>
+            <h1>High-Fidelity Mesh Improvement for MRI-Derived Anatomical Models</h1>
+            <p>Project Proposal</p>
         </header>
 
         <section class="card">
@@ -157,10 +157,6 @@
                 While the component algorithms are established, the originality of this work arises from the <strong>novel synthesis and quantitative evaluation of these techniques on a uniquely challenging class of medical data: brain tumor models</strong>. Per the course guidelines, original work can involve merging and exploring topics in new contexts. This project provides a comparative study to establish a "best-practices" framework for improving the geometric fidelity of complex, irregular biological structures.
             </p>
     
-            <h3>Relationship to Geometric Modeling</h3>
-            <p>
-                This project directly addresses core geometric modeling tasks, including mesh representation, smoothing, simplification, and the analysis of geometric quality. It applies these foundational principles to the challenging domain of anatomical reconstruction, demonstrating how geometric modeling is critical for creating the high-fidelity digital models required in modern medicine.
-            </p>
         </section>
 
         <section class="card">
@@ -227,7 +223,7 @@
         
         <footer>
             <p>CSCE 645: Geometric Modeling</p>
-            <p>[Your Name Here]</p>
+            <p>[Shubham Vikas Mhaske]</p>
         </footer>
     </div>
 </body>
