--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     
             <h3>Originality</h3>
             <p>
-                While the component algorithms are established, the originality of this work arises from the <strong>novel synthesis and quantitative evaluation of these techniques on a uniquely challenging class of medical data: brain tumor models</strong>. Per the course guidelines, original work can involve merging and exploring topics in new contexts. This project provides a comparative study to establish a "best-practices" framework for improving the geometric fidelity of complex, irregular biological structures.
+                While the component algorithms are established, the originality of this work arises from the <strong>novel synthesis and quantitative evaluation of these techniques on a uniquely challenging class of medical data: brain tumor models</strong>. This project provides a comparative study to establish a "best-practices" framework for improving the geometric fidelity of complex, irregular biological structures.
             </p>
     
         </section>
