--- a/index.html
+++ b/index.html
@@ -154,9 +154,13 @@
     
             <h3>Originality</h3>
             <p>
-                While the component algorithms are established, the originality of this work arises from the <strong>novel synthesis and quantitative evaluation of these techniques on a uniquely challenging class of medical data: brain tumor models</strong>. This project provides a comparative study to establish a "best-practices" framework for improving the geometric fidelity of complex, irregular biological structures.
+                While the component algorithms are established, the originality of this work arises from the <strong>novel synthesis and quantitative evaluation of these techniques on a uniquely challenging class of medical data: brain models</strong>. This project provides a comparative study to establish a "best-practices" framework for improving the geometric fidelity of complex, irregular biological structures.
             </p>
     
+            <h3>Relationship to Geometric Modeling</h3>
+            <p>
+                This project directly addresses core geometric modeling tasks, including mesh representation, smoothing, simplification, and the analysis of geometric quality. It applies these foundational principles to the challenging domain of anatomical reconstruction, demonstrating how geometric modeling is critical for creating the high-fidelity digital models required in modern medicine.
+            </p>
         </section>
 
         <section class="card">
@@ -228,4 +232,3 @@
     </div>
 </body>
 </html>
-
